# prj

./: Cargo.toml  README.md  azure-pipelines.yml
src/: config.rs  git.rs  main.rs  traverse.rs
src/commands/: cd.rs  configure.rs  configure_root_doc.txt  mod.rs
src/discovery/: cache.rs  git.rs  mod.rs  traverse.rs
