[package]
name = "prj"
description = "Navigate between local repos quickly with fuzzy find and git summaries"
version = "0.1.0"
authors = ["Jordan West <jordwest@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
toml = "0.5"
term_size = "1.0.0-beta1"
git2 = "0.11.0"
dirs = "2.0"
serde = "1.0"
serde_derive = "1.0"
fuzzy-matcher = "0.3.1"
crossterm = "0.14.2"
clap = "2"
